Muestra de productos en cart con funciones para mostrar el cambio de precio

--- a/css/styles.css
+++ b/css/styles.css
@@ -177,3 +177,9 @@ input[type="submit"]:active {
   text-align: left;
 }
 
+.payment-method {
+  max-width: 30rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
