Empezando cambios en pagina de inicio

--- a/css/styles.css
+++ b/css/styles.css
@@ -183,3 +183,7 @@ input[type="submit"]:active {
   justify-content: space-between;
   align-items: center;
 }
+
+.bodyCher {
+  background-image:  ;
+}
